testsuite/tests/aggregate/invalid-checks/aggr5.gpr
aggregate project Aggr5 is
   --  Invalid: no file name specified

   for Project_Files use ("./",
                          ".",
                          "");
end Aggr5;
